@@ -1,5 +1,7 @@
 *Rails 3.2.0 (unreleased)*
 
+* Changed log level of warning for missing CSRF token from :debug to :warn. [Mike Dillon]
+
 * content_tag_for and div_for can now take the collection of records. It will also yield the record as the first argument if you set a receiving argument in your block [Prem Sichanugrist]
 
   So instead of having to do this:
